style.css
/* ... */
.menu-inner-container{
    display: grid;
    justify-items: center;
    align-items: center;
    
    
}
.menu-inner-container h1{
    padding-bottom: 20px;
    row-gap: 20px;
}
.menu-inner-container img{
    margin: 0px;
    padding: 0px;
    border: 0px;
}
#desserts-wrap-1 h1{
    padding-top: 30px;
}
#desserts-wrap-1 img{
    padding-top: 20px;
}
#desserts-wrap-2 h1{
    padding-top: 30px;
}
#desserts-wrap-2 img{
    padding-top: 30px;
}
.desserts-wrap-2 {
    padding-top: 20px;
}


/* popup starts */
.hidden{
    display: none;
}

.hidden1{
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    background-color: #521010;
    height: 400px;
    width: 800px;
    margin: 0;
    border-radius: 50px;

}
.hidden1 div img{
    width: 300px;
    height: 400px;
    margin: 0;
}
.hidden1 div{
    margin: 0px;

}
.hidden1-content {
    width: 100%;
    font-size: xx-large;
    
}
.inner-hidden-content{
    display: flex;

}
#bgimg1{
    width: 38px;
    height: 38px;
    position:relative;
    top: -50px;
    right: -160px;
}
/* .hidden1:hover{
    display: flex;
} */

/* popup ends */



/*..............................End of Menu.html..............................*/






/*..............................Start of Franchise.html..............................*/


.franchise-container{
    display: flex;
    align-content: center;
    color: white;
    background: url(./assets/photo/WhatsApp\ Image\ 2025-04-26\ at\ 11.41.04\ AM\ \(1\).jpeg) no-repeat center/cover;
    justify-content: center;
    align-items: center;
    height: 100vh;
    display: grid;
    font-size: 25px;
    width: 100%;
    font-family:cursive;
    color:  white;

}

.franchise-content1{
    
    justify-items: center;
    align-items: center;
    display: grid;
    grid-template-columns: auto;
    row-gap: 40px;

}


 #apply button{
    background-color: #ff5672;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 20px;
    border: #ff5672 2px solid;
    cursor: pointer;
    font-size: 1rem;
    transition: all 0.3s linear;
}

 #apply button:hover{
    background-color: white;
    color: #ff5672;
    
}
.play-icon{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 50px;
    margin-left: 10px;
    cursor: pointer;
    gap: 10px;
}

.franchise-content2{
    
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 100px 200px;
    row-gap: 20px;
    column-gap: 50px;
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
    font-family:cursive;
    font-size: 20px;
    
}

hr{
    width: 90%;
    height: 4px;
    margin: 20px 0px 50px 80px;
    background-color: #bd62f1;
    
}

.franchise-content3{
    display: grid;
    grid-template-columns: auto;
    justify-items: center;
    align-items: center;
    row-gap: 40px;
}

.franchise-content3-1{
    display: grid;
    grid-template-columns: auto auto auto;
    /* display: flex;
    flex-direction: column;
    justify-content: space-evenly; */
    row-gap: 50px;
    margin: 40px 40px;
    gap: 30px;
}

.franchise-content4{
    display: grid;
    grid-template-columns: auto;
    justify-items: center;
    align-items: center;
    row-gap: 20px;
}

.franchise-content4 button{
    background-color: #ff5672;
    color: white;
    padding: 10px 20px;
    border-color: #ff5672;
    border-radius: 20px;
    cursor: pointer;
    font-size: 1rem;
    transition: all 0.3s linear;
    margin: 40px 0;
}

 .franchise-content4 button:hover{
    background-color: white;
    border-color: #FF5672;
    color: #ff5672;
    
}

.inner-content-1{
    display: grid;
    justify-items: center;
    justify-items: center;
    grid-template-columns: auto;
    row-gap: 20px;
    
}

.franchise-content5{
    display: grid;
    grid-template-columns: auto;
    justify-items: center;
    align-items: center;
    row-gap: 40px;
    gap: 20px;
    margin: 40px 0;
}

.inner-content-5{
    display: flex;
    align-content: center;
    justify-content: space-between;
    align-items: center;
    gap: 30px;
}
.franchise-content5 img{
    width: 100%;
    height: 100%;

    
}

.inside-content-5{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 20px;
    color: white;
    gap: 40px;

}
a{
    display: flex;
    text-decoration: none;
    color: black;
    align-items: center;
    justify-content: center;


}










/*..............................End of Franchise.html..............................*/

